--- a/MedivalRPG/MedivalRPG.vcxproj
+++ b/MedivalRPG/MedivalRPG.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{fdfe12a6-d0f6-4933-825d-f0f345e94fe9}</ProjectGuid>
     <RootNamespace>MedivalRPG</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Pong</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -140,6 +141,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Vector2.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
