--- a/MedivalRPG/MedivalRPG.vcxproj.filters
+++ b/MedivalRPG/MedivalRPG.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="Game.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Vector2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp">
